samples/_failures_safe/1761609247_779b40_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_608d51b9.c: In function ‘main’:
./samples/SAFE/__tmp_608d51b9.c:165:9: error: expected declaration or statement at end of input
  165 |         printf("Empty input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_608d51b9.c:165:9: error: expected declaration or statement at end of input
